--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,103 @@
 
 /* Sections style */
 @import url('./header.css');
-@import url('./vite-promo.css');
 @import url('./badges.css');
 @import url('./back-link.css');
-@import url('./footer.css');
+
+
+
+.gallery {
+  list-style: none;
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+  min-width: 1128px;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 50px;
+}
+
+.gallery-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.gallery-image {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 8px;
+  cursor: url(../img/hand.png), auto;
+}
+
+.feedback-form {
+  width: 550px;
+  margin: 16px;
+  text-align: left;
+}
+
+.modal-label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 8px;
+  margin-bottom: 8px;
+}
+
+.modal-imput {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  background-color: transparent;
+  padding: 0 16px;
+
+}
+
+.modal-imput:hover {
+  border: 1px solid #000;
+}
+
+.modal-imput:active {
+  border: 1px solid #808080;
+}
+
+.modal-textarea {
+  width: 360px;
+  height: 80px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  background-color: transparent;
+  resize: none;
+  padding: 8px 16px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-textarea:hover {
+  border: 1px solid #000;
+  ;
+}
+
+
+.modal-btn {
+  border: 1px solid #1e3fe0;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 95px;
+  height: 40px;
+  background-color: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.modal-btn:hover {
+  background: #6c8cff;
+}
